# autocreate

./: .gitignore  pyproject.toml
alembic/: env.py
autocreate/: api.py
autocreate/app/agent/tools/: code_search.py
autocreate/app/models/: codebase.py  user.py
autocreate/app/prompts/: pydantic_xml_prompt.py  solution_discovery_prompt.py
autocreate/app/services/: codebase_service.py  index_storage_service.py  repo_service.py  solution_discovery_service.py  user_service.py
autocreate/app/utils/: helpers.py
autocreate/database/: db.py  example.db
autocreate/database/models/: base.py  codebase.py  user.py
autocreate/infrastructure/: sql_storage.py
